--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
   <script src="./js/index.js" defer></script>
 </head>
 <body>
-  <button>Rock</button>
-  <button>Paper</button>
-  <button>Scissors</button>
+  <div class="container">
+    <button>Rock</button>
+    <button>Paper</button>
+    <button>Scissors</button>
+  </div>
   <div class="result"></div>
 </body>
 </html>
