--- a/index.html
+++ b/index.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Rock Paper Scissors</title>
-  <link rel="stylesheet" href="./css/index.css">
-  <script src="./js/index.js" defer></script>
-</head>
-<body>
-  <div class="container">
-    <button>Rock</button>
-    <button>Paper</button>
-    <button>Scissors</button>
-  </div>
-  <div class="result"></div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Rock Paper Scissors</title>
+    <link rel="stylesheet" href="./css/index.css" />
+    <script src="./js/index.js" defer></script>
+  </head>
+  <body>
+    <div class="start">
+      <button>Start the game</button>
+    </div>
+    <div class="container">
+      <button class="word">Rock</button>
+      <button class="word">Paper</button>
+      <button class="word">Scissors</button>
+    </div>
+    <div class="result"></div>
+  </body>
 </html>
