--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
     <script src="./js/index.js" defer></script>
   </head>
   <body>
-    <div class="start">
-      <button>Start the game</button>
+    <div class="game-contoller-btns">
+      <button class="start">Start the game</button>
+      <button class="restart">Restart the game</button>
     </div>
+    
     <div class="container">
       <button class="word">Rock</button>
       <button class="word">Paper</button>
