--- a/index.html
+++ b/index.html
@@ -9,16 +9,27 @@
     <script src="./js/index.js" defer></script>
   </head>
   <body>
-    <div class="game-contoller-btns">
-      <button class="start">Start the game</button>
-      <button class="restart">Restart the game</button>
+    <div class="main-container">
+      <div class="game-introduction">
+        <h1>Rock Paper Scissors</h1>
+        <p>Press "start the game"!</p>
+        <p>You are the winner if you win five times</p>
+      </div>
+      <div class="game-body">
+        <div class="game-contoller-btns">
+          <button class="start">Start the game</button>
+          <button class="restart">Restart the game</button>
+        </div>
+        
+        <div class="container">
+          <div>
+            <button class="word">Rock</button>
+            <button class="word">Paper</button>
+            <button class="word">Scissors</button>
+          </div>
+          <div class="result"></div>
+        </div>
+      </div>
     </div>
-    
-    <div class="container">
-      <button class="word">Rock</button>
-      <button class="word">Paper</button>
-      <button class="word">Scissors</button>
-    </div>
-    <div class="result"></div>
   </body>
 </html>
